--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -55,40 +55,40 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="offset-2 col-8">
-          <nav>
-            <ul class="pagination justify-content-center">
+<!--      <div class="row">-->
+<!--        <div class="offset-2 col-8">-->
+<!--          <nav>-->
+<!--            <ul class="pagination justify-content-center">-->
 
-              <th:block th:if="${cpg gt 1}">
-                <li class="page-item">
-                <a class="page-link" th:href="|${pglink}1|">처음</a></li>
-              </th:block>
+<!--              <th:block th:if="${cpg gt 1}">-->
+<!--                <li class="page-item">-->
+<!--                <a class="page-link" th:href="|${pglink}1|">처음</a></li>-->
+<!--              </th:block>-->
 
-              <!--<th:block th:if="${cpg - 1 gt 0}"><li class="page-item"></th:block>
-              <th:block th:unless="${cpg - 1 lt 0}"><li class="page-item disabled"></th:block>-->
-              <li th:class="${ (cpg - 1 gt 0) ? 'page-item' : 'page-item disabled'}">
-              <a class="page-link" th:href="|${pglink}${cpg - 1}|">이전</a></li>
+<!--              &lt;!&ndash;<th:block th:if="${cpg - 1 gt 0}"><li class="page-item"></th:block>-->
+<!--              <th:block th:unless="${cpg - 1 lt 0}"><li class="page-item disabled"></th:block>&ndash;&gt;-->
+<!--              <li th:class="${ (cpg - 1 gt 0) ? 'page-item' : 'page-item disabled'}">-->
+<!--              <a class="page-link" th:href="|${pglink}${cpg - 1}|">이전</a></li>-->
 
-              <th:block th:each="i : ${#numbers.sequence(stpg, stpg+9)}">
-                <th:block th:if="${i le cntpg}">
-                  <li th:class="${ i ne cpg ? 'page-item' : 'page-item active'}">
-                    <a class="page-link" th:href="|${pglink}${i}|" th:text="${i}"></a></li>
-                </th:block>
-              </th:block>
+<!--              <th:block th:each="i : ${#numbers.sequence(stpg, stpg+9)}">-->
+<!--                <th:block th:if="${i le cntpg}">-->
+<!--                  <li th:class="${ i ne cpg ? 'page-item' : 'page-item active'}">-->
+<!--                    <a class="page-link" th:href="|${pglink}${i}|" th:text="${i}"></a></li>-->
+<!--                </th:block>-->
+<!--              </th:block>-->
 
-              <li th:class="${ (cpg+1) le cntpg ? 'page-item' : 'page-item disabled'}">
-              <a class="page-link" th:href="|${pglink}${cpg+1}|">다음</a></li>
+<!--              <li th:class="${ (cpg+1) le cntpg ? 'page-item' : 'page-item disabled'}">-->
+<!--              <a class="page-link" th:href="|${pglink}${cpg+1}|">다음</a></li>-->
 
-              <th:block th:if="${cpg lt cntpg}">
-                <li class="page-item">
-                <a class="page-link" th:href="|${pglink}${cntpg}|">끝</a></li>
-              </th:block>
+<!--              <th:block th:if="${cpg lt cntpg}">-->
+<!--                <li class="page-item">-->
+<!--                <a class="page-link" th:href="|${pglink}${cntpg}|">끝</a></li>-->
+<!--              </th:block>-->
 
-            </ul>
-          </nav>
-        </div>
-      </div>
+<!--            </ul>-->
+<!--          </nav>-->
+<!--        </div>-->
+<!--      </div>-->
 
     </div>
 
